<resources>
    <string name="app_name">QA-NTUST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="main_activity_name">All Questions</string>
    <string name="add_question_activity_name">Add a New Question</string>

    <string name="difficulty_1">1</string>
    <string name="difficulty_2">2</string>
    <string name="difficulty_3">3</string>

    <string name="edit_question_content">Describe your question&#8230;</string>
    <string name="difficulty_string">Difficulty</string>

    <string name="high_difficulty">High</string>
    <string name="med_difficulty">Medium</string>
    <string name="low_difficulty">Low</string>

    <string name="action_orders">Order</string>
    <string name="action_count_order">Count</string>
    <string name="action_difficulty_order">Difficulty</string>

    <string name="add_task_activity_name">Add a New Question</string>

    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <string name="edit_task_description">Describe your task&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="title_activity_creation">creation</string>
    <string name="question">Question : </string>
    <string name="ans">Answer : </string>
    <string name="choice">Choices : </string>

    <string name="difficulty">Difficulty : </string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_easy">Easy</string>

    <string name="ans_A">A</string>
    <string name="ans_B">B</string>
    <string name="ans_C">C</string>
    <string name="ans_D">D</string>

    <string name="choice_A">A : </string>
    <string name="choice_B">B : </string>
    <string name="choice_C">C : </string>
    <string name="choice_D">D : </string>

    <string name="choice_A_content">Enter choice A here</string>
    <string name="choice_B_content">Enter choice B here</string>
    <string name="choice_C_content">Enter choice C here</string>
    <string name="choice_D_content">Enter choice D here</string>

    <string name="question_content">Enter question here</string>

    <string name="pref_play_music_label">Music</string>
    <string name="pref_play_music_key" translatable="false">play_music</string>

    <string name="pref_play_true">On</string>
    <string name="pref_play_false">Off</string>

    <string name="create_button_text">Create</string>
    <string name="update_button_text">Update</string>
    <string name="submit_button_text">Submit</string>

    <string name="login_activity_name">Login</string>
    <string name="login">LOGIN</string>
    <string name="sign_out">sign out</string>

    <string name="reminder_title">You leave a question to answer</string>
    <string name="reminder_text">Answer to get point!</string>
    <string name="main_notification_channel_name">QA-Notification-channel</string>

    <string name="reminder_title2">You have no answer</string>
    <string name="reminder_text2">Go to add a question</string>
</resources>
