<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/action_orders"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_count_order"
                android:title="@string/action_count_order"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_difficulty_order"
                android:title="@string/action_difficulty_order"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
