<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddQuestionActivity code.
    This includes an EditText to add a task description, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewQuestionContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/question"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextQuestionContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/edit_question_content"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:text="@string/choice"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewChoiceA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50dp"
                android:text="@string/choice_A"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextChoiceA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/choice_A_content"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewChoiceB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50dp"
                android:text="@string/choice_B"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextChoiceB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/choice_B_content"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewChoiceC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50dp"
                android:text="@string/choice_C"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextChoiceC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/choice_C_content"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewChoiceD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50dp"
                android:text="@string/choice_D"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextChoiceD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/choice_D_content"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:text="@string/ans"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonAnswerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAnswerSelected"
            android:text="@string/ans_A" />

        <RadioButton
            android:id="@+id/radioButtonAnswerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAnswerSelected"
            android:text="@string/ans_B" />

        <RadioButton
            android:id="@+id/radioButtonAnswerC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAnswerSelected"
            android:text="@string/ans_C" />

        <RadioButton
            android:id="@+id/radioButtonAnswerD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAnswerSelected"
            android:text="@string/ans_D" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:text="@string/difficulty"
        android:textAlignment="center"
        android:textSize="18sp" />


    <RadioGroup
        android:id="@+id/radioGroupDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonDifficultyHard"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDifficultySelected"
            android:text="@string/difficulty_hard" />

        <RadioButton
            android:id="@+id/radioButtonDifficultyMedium"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDifficultySelected"
            android:text="@string/difficulty_medium" />

        <RadioButton
            android:id="@+id/radioButtonDifficultyEasy"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDifficultySelected"
            android:text="@string/difficulty_easy" />

    </RadioGroup>


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1" />

</LinearLayout>